# origin

./: .gitignore  README.md
08_PreDataBase/: CMakeLists.txt  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Building and connecting libraries/Task 5/: CMakeLists.txt  ClassHierarchy.cpp  ClassHierarchy.vcxproj  ClassHierarchyDynamicLibrary.sln  ClassHierarchyDynamicLibrary.vcxproj  ClassHierarchyDynamicLibrary.vcxproj.filters  DynamicLibrary.h
Building and connecting libraries/Task 5/include/: Rhombus.h
Building and connecting libraries/Task 5/src/: Quadrilateral.cpp  Rhombus.cpp  RightTriangle.cpp  Triangle.cpp
CMake/Task 2/: .gitignore  CMakeLists.txt  Class_Hierarchy.cpp  Class_Hierarchy.sln  EquilateralTriangle.cpp  Figure.h  IsoscelesTriangle.h  Parallelogram.cpp  Parallelogram.h  Quadrilateral.h  Rectangle.cpp  Rhombus.cpp  Square.cpp  Triangle.cpp  Triangle.h
CloningClassObject/: CloningClassObject.cpp  CloningClassObject.sln  CloningClassObject.vcxproj  CloningClassObject.vcxproj.filters
ContainerPrinting/: ContainerPrinting.cpp  ContainerPrinting.sln  ContainerPrinting.vcxproj  ContainerPrinting.vcxproj.filters
CopyingSmartArrays/: CopyingSmartArrays.cpp  CopyingSmartArrays.sln  CopyingSmartArrays.vcxproj  CopyingSmartArrays.vcxproj.filters
LargeNumbers/: LargeNumbers.cpp  LargeNumbers.sln  LargeNumbers.vcxproj  LargeNumbers.vcxproj.filters
MovingObjects/: MovingObjects.cpp  MovingObjects.sln  MovingObjects.vcxproj  MovingObjects.vcxproj.filters
NumberCounter/: NumberCounter.cpp  NumberCounter.sln  NumberCounter.vcxproj  NumberCounter.vcxproj.filters
ORM/TaskTwo/: CMakeLists.txt  main.cpp
PostgreSQLAndC++/: CMakeLists.txt  main.cpp
PreConcurrent/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
PreUDPsocket/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
ProgramWithErrors/: ProgramWithErrors.cpp  ProgramWithErrors.sln  ProgramWithErrors.vcxproj  ProgramWithErrors.vcxproj.filters
QtCoreModules/: CMakeLists.txt  main.cpp
RemovingDuplicates/: RemovingDuplicates.cpp  RemovingDuplicates.sln  RemovingDuplicates.vcxproj  RemovingDuplicates.vcxproj.filters
RemovingIntersection/: RemovingIntersection.cpp  RemovingIntersection.sln  RemovingIntersection.vcxproj  RemovingIntersection.vcxproj.filters
SearchEngine/: SearchEngine.cpp  SearchEngine.sln  SearchEngine.vcxproj  SearchEngine.vcxproj.filters  config.ini
SimplifiedVector/: SimplifiedVector.cpp  SimplifiedVector.sln  SimplifiedVector.vcxproj  SimplifiedVector.vcxproj.filters
SmartArray/: SmartArray.cpp  SmartArray.sln  SmartArray.vcxproj  SmartArray.vcxproj.filters
Squaring/: Squaring.cpp  Squaring.sln  Squaring.vcxproj
StopwatchApp/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
SymbolFrequency/: SymbolFrequency.cpp  (+3 more)
(+246 files in other folders)
